--- a/app/views/_shared/_modal-container.html.slim
+++ b/app/views/_shared/_modal-container.html.slim
@@ -1,6 +1,6 @@
 dialog id="my-modal" data-controller="modal" data-modal-target="container"
   article
-    header.flex.justify-between.items-center.gap
+    header.nav_header
       - if defined? subheading
         hgroup
           h4 = heading
