--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -1,10 +1,10 @@
 = render "_shared/notice"
 
-header.flex.justify-between.items-center.mb-8
+header.nav_header
   hgroup
     h1 = "Sale #{@sale.shopify_name.presence || ""}"
     h2 = @sale.title
-  menu.flex.gap-2.pt-2
+  menu.nav_menu
     - if @sale.shopify_id
       li = pull_btn_for @sale
     li = shop_admin_link @sale
