--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -1,16 +1,17 @@
 = render "_shared/notice"
 
 header.nav_header
-  hgroup
-    h1 Purchase №#{@purchase.id}
-    h2 = @purchase.product.full_title
-    - if @purchase.edition
-      h4.text-gray-500.font-normal = @purchase.edition.type_name_and_value
+  .flex.gap-4
+    = back_btn
+    hgroup
+      h1 Purchase №#{@purchase.id}
+      h2 = @purchase.product.full_title
+      - if @purchase.edition
+        h4.text-gray-500.font-normal = @purchase.edition.type_name_and_value
   menu.nav_menu
     li = link_to @purchase.product
       i.icn 🧸
       | Product
-    li = back_btn
     li = edit_btn_for @purchase
 
 .section-wide.flex.flex-col.gap-8
