Remove border from debts table container

--- a/app/views/dashboard/debts.html.slim
+++ b/app/views/dashboard/debts.html.slim
@@ -1,7 +1,7 @@
 header
   h1 Debts 
 
-.section-border-base.section-wide
+.section-wide
   .table-card
     .search
       = render partial: "_shared/search-form", locals: {path: debts_path}
