--- a/app/views/customers/show.html.slim
+++ b/app/views/customers/show.html.slim
@@ -2,8 +2,8 @@
 
 = render "_shared/nav-show", model: @customer
 
-main
-  table.vertical(role="grid")
+.section-wide.section-border-base
+  table
     thead
       tr
         th ID
