--- a/app/views/sale_items/show.html.slim
+++ b/app/views/sale_items/show.html.slim
@@ -19,7 +19,7 @@ header.nav_header
       i.icn 🛒
       | Sale
 
-.section-wide.flex.flex-col.gap
+.section-wide.flex.flex-col.gap-8
   - if @sale_item.purchase_items.present?
     .table-card data-controller="move-items"
       h3.flex.justify-between.px-3.pt-4
