Improve edit/new navigation header UI and layout

--- a/app/views/_shared/_nav-edit.html.slim
+++ b/app/views/_shared/_nav-edit.html.slim
@@ -1,10 +1,11 @@
 - route = local_assigns[:model] if local_assigns[:route].nil?
 
-header.nav_header
-  h1 Edit #{model.model_name.name.titleize.singularize}
+header.nav_header.mb-8
+  .flex.gap-4
+    = back_btn
+    h1 Edit #{model.model_name.name.titleize.singularize}
   menu.nav_menu
-    li = link_to "Back", "javascript:history.back()"
     li
       = link_to route
         i.icn 📄
-        | Go to #{model.model_name.name.titleize.singularize} Page
+        | View #{model.model_name.name.titleize.singularize} Page
