--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -14,9 +14,7 @@ section.section-border-base.section-wide data-controller="table move-items"
           th Image
           th Product
           th Supplier
-          th.text-right Price, $
-          th.text-right Total, $
-          th.text-right Debt, $
+          th Payment Progress
           th.text-right Actions
       tbody
         = render @purchases, cache: true
