--- a/app/views/warehouses/_purchase_items.html.slim
+++ b/app/views/warehouses/_purchase_items.html.slim
@@ -14,8 +14,9 @@
       table data-controller="table"
         thead
           = render "_shared/move_to_warehouse/th"
-          th Photo
           th Title
+          th Supplier
+          th Payment Progress
           th Sale
           th.text-right Actions
         tbody
