--- a/app/views/warehouses/_purchase_item.html.slim
+++ b/app/views/warehouses/_purchase_item.html.slim
@@ -4,12 +4,12 @@ tr(
   data-table-url-param=purchase_item_path(item)
 )
   = render "_shared/move_to_warehouse/td", id: item.id
-  td.text-center
-    = render "_shared/preloadable_img", src: thumb_url(item), class_names: "zoomable", width: 100
   td
     = item.purchase.product.full_title
     - if item.purchase.edition.present?
       | → #{item.purchase.edition.title}
+  td = item.purchase.supplier.title
+  td = render "_shared/purchase_payment_progress", purchase: item.purchase
   td
     - if item.sale
       = link_to item.sale.title, item.sale, class: "no-events link"
