--- a/app/assets/tailwind/images.css
+++ b/app/assets/tailwind/images.css
@@ -7,7 +7,7 @@
     @apply block rounded-md min-h-fit max-h-full object-contain object-center transition-transform;
 
     &.loading {
-      @apply animate-pulse bg-gray-200 w-full h-full;
+      @apply animate-pulse bg-gray-200 w-200 h-100 mx-auto;
     }
 
     &.not-found {
