Clarify naming to reflect multi-select functionality

--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -22,16 +22,16 @@
     label Editions
     p.text-gray-600 Select any combination of the attributes below to generate editions automatically
 
-    .flex.justify-between.gap-4.px-4.pb-2
+    .flex.justify-between.gap-4.px-4
       .block.w-full
         = form.label :size
-        = form.collection_select(:size_ids, Size.all, :id, :value, { class: "select" }, {multiple: true, data: { product_editions_target: "size" }})   
+        = form.collection_select(:size_ids, Size.all, :id, :value, { class: "select" }, {multiple: true, data: { product_editions_target: "sizes" }})   
       .block.w-full
         = form.label :version
-        = form.collection_select(:version_ids, Version.all, :id, :value, { class: "select" }, {multiple: true, data: { product_editions_target: "version" }})
+        = form.collection_select(:version_ids, Version.all, :id, :value, { class: "select" }, {multiple: true, data: { product_editions_target: "versions" }})
       .block.w-full
         = form.label :color
-        = form.collection_select(:color_ids, Color.all, :id, :value, { class: "select" }, {multiple: true, data: { show_search: false, product_editions_target: "color"} })  
-    ul.px-4.my-4.flex.flex-wrap.gap-3 data-product-editions-target="list"
+        = form.collection_select(:color_ids, Color.all, :id, :value, { class: "select" }, {multiple: true, data: { show_search: false, product_editions_target: "colors"} })  
+    ul.px-4.mt-4.mb-2.flex.flex-wrap.gap-3.hidden data-product-editions-target="list"
 
   = form_submit_for(product, form)
