--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -1,11 +1,9 @@
+/* === Imports === */
 @import "tailwindcss";
 @import "./fonts";
 @import "./slim-select";
-@import "./navigation";
-@import "./tables";
-@import "./pagination";
-@import "./images";
 
+/* === Theme variables === */
 @theme {
   --font-icn:
     "Noto Emoji", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
@@ -14,21 +12,69 @@
   --icon-chevron: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20fill%3D%22none%22%20viewBox%3D%220%200%2024%2024%22%20stroke-width%3D%221.5%22%20stroke%3D%22currentColor%22%20class%3D%22size-6%22%3E%3Cpath%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20d%3D%22m19.5%208.25-7.5%207.5-7.5-7.5%22%2F%3E%3C%2Fsvg%3E);
 }
 
-/* To rule them all */
+/* === Base styles === */
 @layer base {
+  /* Global */
   html {
     @apply antialiased scroll-smooth;
   }
-
   :focus-visible {
     @apply outline-dashed outline-2 outline-offset-2 outline-gray-300;
   }
 
+  /* Typography */
+  h1,
+  h2,
+  h3,
+  h4 {
+    @apply font-black text-gray-800;
+  }
+  h1 {
+    @apply text-6xl text-gray-900;
+  }
+  h2 {
+    @apply text-2xl;
+  }
+  h3 {
+    @apply text-xl;
+  }
+  h4 {
+    @apply text-lg;
+  }
+
+  /* Links & buttons */
   a,
   input[type="submit"],
   input[type="button"],
   button {
     @apply cursor-pointer font-medium no-underline inline-flex items-center justify-center gap-2 px-2 py-2 rounded-sm bg-gray-100 hover:bg-gray-200 transition-all duration-150;
+  }
+
+  a.link {
+    @apply inline underline p-0 bg-transparent hover:bg-transparent border-none hover:text-blue-600 font-[weight:inherit];
+  }
+
+  /* Forms */
+  label {
+    @apply block font-medium text-gray-900 mt-6 mb-2;
+  }
+
+  input,
+  select,
+  .ss-main {
+    @apply appearance-none w-full pl-3 pr-10 py-2 cursor-pointer border-1 border-gray-300/80 rounded-sm;
+  }
+
+  select:not([multiple], [size]),
+  .ss-main {
+    background-image: var(--icon-chevron);
+    background-position: center right 0.75rem;
+    background-size: 1rem auto;
+    background-repeat: no-repeat;
+  }
+
+  .ss-main .ss-values .ss-single {
+    @apply ml-0;
   }
 
   input[type="file"] {
@@ -52,9 +98,8 @@
   input[type="checkbox"] {
     @apply rounded checked:bg-blue-600 mt-1;
   }
-
   input[type="checkbox"]:checked {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(255, 255, 255)' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='4.5,12.75 10.5,18.75 19.5,5.25'%3E%3C/polyline%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,...");
     background-position: center center;
     background-size: 1.2em;
     background-repeat: no-repeat;
@@ -64,146 +109,198 @@
     @apply rounded-full checked:bg-white checked:border-6;
   }
 
-  label {
-    @apply block font-medium text-gray-900 mt-6 mb-2;
+  /* Tables */
+  table {
+    @apply w-full border-collapse table-auto text-left border-b-1 mt-3;
   }
-
-  select,
-  input,
-  .ss-main {
-    @apply appearance-none w-full pl-3 pr-10 py-2 cursor-pointer border-1 border-gray-300/80 rounded-sm;
+  thead {
+    @apply border-b-4 border-gray-100;
   }
-
-  select:not([multiple], [size]),
-  .ss-main {
-    background-image: var(--icon-chevron);
-    background-position: center right 0.75rem;
-    background-size: 1rem auto;
-    background-repeat: no-repeat;
+  th {
+    @apply text-gray-600 align-bottom font-semibold;
+  }
+  th,
+  td {
+    @apply p-3;
+  }
+  tbody tr {
+    @apply border-b-2 border-b-gray-100/60 hover:bg-gray-50 transition-colors duration-100 cursor-pointer;
+  }
+  tbody tr:last-child {
+    @apply border-b-transparent;
+  }
+  tr.selected {
+    @apply bg-amber-100 hover:bg-amber-200/80;
   }
 
   table select:not([multiple], [size]) {
     @apply hover:bg-gray-100;
   }
-
-  .ss-main .ss-values .ss-single {
-    @apply ml-0;
-  }
 }
 
-@layer base {
-  h1,
-  h2,
-  h3,
-  h4 {
-    @apply font-black text-gray-800;
-  }
-  h1 {
-    @apply text-6xl text-gray-900;
-  }
-  h2 {
-    @apply text-2xl;
-  }
-  h3 {
-    @apply text-xl;
-  }
-  h4 {
-    @apply text-lg;
-  }
-}
-
+/* === Components === */
 @layer components {
+  /* Navigation */
+  nav[role="navigation-main"],
+  nav[role="navigation-main"] ul {
+    @apply flex items-center;
+  }
+  nav[role="navigation-main"] {
+    @apply justify-between;
+  }
+  nav[role="navigation-main"] a {
+    @apply text-gray-500 hover:text-gray-900 border-0 bg-transparent hover:bg-gray-100;
+  }
+
+  nav[role="navigation-dropdown"] {
+    @apply relative;
+  }
+  nav[role="navigation-dropdown"] > button {
+    @apply p-2 rounded-sm hover:bg-gray-100 transition-all duration-150 cursor-pointer;
+  }
+  nav[role="navigation-dropdown"]:hover > button {
+    @apply bg-gray-100;
+  }
+
+  nav[role="navigation-dropdown"] ul {
+    @apply flex flex-col items-start absolute right-0 top-full w-40 pt-5 pr-4 pb-7 pl-4 bg-white border border-gray-200 rounded-lg opacity-0 invisible transition-all duration-150 z-228;
+  }
+  nav[role="navigation-dropdown"]:hover ul {
+    @apply opacity-100 visible text-left;
+  }
+  nav[role="navigation-dropdown"] li a {
+    @apply w-full items-center justify-start;
+  }
+
+  .nav_header {
+    @apply flex justify-between items-center text-pretty;
+  }
+  .nav_menu {
+    @apply flex justify-end whitespace-nowrap gap-2 pt-2;
+  }
+
+  /* Buttons */
+  .btn-rounded {
+    @apply rounded-full px-3 border-gray-200;
+  }
+  .btn-red {
+    @apply text-red-700 bg-red-100/60 hover:bg-red-200/60;
+  }
+  .undo {
+    @apply text-red-700 hover:text-red-700!;
+  }
   .icn {
     @apply font-normal font-icn not-italic;
   }
 
-  .btn-rounded {
-    @apply rounded-full px-3 border-gray-200;
+  /* Pagination */
+  .pagination {
+    @apply flex items-center self-end text-center;
+  }
+  .pagination-top {
+    @apply flex justify-end min-w-4/10;
+  }
+  .pagination-bottom {
+    @apply flex justify-center items-center py-8 w-full h-full;
+  }
+  .pagination a {
+    @apply whitespace-nowrap ml-2;
+  }
+  .pagination-list {
+    @apply flex items-end;
+  }
+  .pagination-list li {
+    @apply flex justify-end min-w-10 max-w-fit;
+  }
+  .pagination-link {
+    @apply w-full;
+  }
+  .pagination-ellipsis {
+    @apply w-full block ml-2;
+  }
+  .pagination a.is-current {
+    @apply bg-gray-200 text-gray-500 cursor-not-allowed;
   }
 
-  .btn-red {
-    @apply text-red-700 bg-red-100/60 hover:bg-red-200/60;
+  /* Preloadable images */
+  .preloadable-img__container {
+    @apply flex justify-center items-center;
+  }
+  .preloadable-img__img {
+    @apply block rounded-md min-h-fit max-h-full object-contain object-center transition-transform;
+  }
+  .preloadable-img__img.loading {
+    @apply animate-pulse bg-gray-200 w-200 h-100 mx-auto;
+  }
+  .preloadable-img__img.not-found {
+    @apply w-full h-full;
+  }
+  .preloadable-img__img.zoomable {
+    @apply duration-150 ease-out p-1;
+  }
+  .preloadable-img__img.zoomable:hover {
+    @apply scale-300 backdrop-blur-sm shadow-lg bg-white/45;
+  }
+  .preloadable-img__img.hidden {
+    @apply hidden;
   }
 
-  a.link {
-    @apply inline underline p-0 bg-transparent hover:bg-transparent border-none hover:text-blue-600 font-[weight:inherit];
-  }
-
-  .undo {
-    @apply text-red-700 hover:text-red-700!;
-  }
-}
-
-@layer components {
+  /* Sections & layout helpers */
   .section-border-base {
     @apply border border-gray-200/80 rounded-xl;
   }
-
   .section-wide {
     @apply mt-4 -mx-8;
   }
-}
-
-@layer components {
   .actions {
     @apply text-right;
   }
-
   .actions a:not(:first-child) {
     @apply ml-2;
   }
-
   .search {
     @apply px-10 pt-8 mb-8 flex justify-between;
   }
-}
-
-@layer components {
   .progress-end {
     @apply bg-lime-600!;
   }
-}
 
-@layer components {
+  /* Cards */
   .cards {
     @apply flex items-center gap-6;
   }
   .card {
     @apply bg-gray-50 border border-gray-100 pl-4 pt-4 pr-10 pb-8 rounded-lg w-fit h-fit;
-    h5 {
-      @apply mt-4 mb-1 text-gray-500;
-    }
-    p {
-      @apply mb-2 text-lg;
-    }
+  }
+  .card h5 {
+    @apply mt-4 mb-1 text-gray-500;
+  }
+  .card p {
+    @apply mb-2 text-lg;
   }
   .table-card {
     @apply border border-gray-200/80 rounded-lg;
-    h3 {
-      @apply p-3 pt-4;
-    }
   }
-}
+  .table-card h3 {
+    @apply p-3 pt-4;
+  }
 
-@layer components {
+  /* Gallery */
   .gallery-nav {
     @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
-    img {
-      &:hover {
-        transform: scale3d(1.2, 1.2, 2);
-        cursor: pointer;
-      }
-    }
-    img.active {
-      @apply outline-gray-500 outline-dashed outline-offset-3;
-    }
+  }
+  .gallery-nav img:hover {
+    transform: scale3d(1.2, 1.2, 2);
+    cursor: pointer;
+  }
+  .gallery-nav img.active {
+    @apply outline-gray-500 outline-dashed outline-offset-3;
   }
   .gallery-btn {
     @apply absolute top-1/2 -translate-y-1/2 z-10 border-none w-20 min-h-83 h-full text-3xl bg-transparent text-gray-300 transition-all duration-150 hover:bg-black/20 hover:text-white;
   }
-}
 
-@layer components {
+  /* Dialogs */
   body:has(dialog[open]) {
     overflow: hidden;
   }
@@ -214,13 +311,10 @@
   dialog[open="false"] {
     display: none;
   }
-}
 
-@layer components {
-  .field_with_errors {
-    & label,
-    & input {
-      @apply text-red-700 border-red-700;
-    }
+  /* Forms: errors */
+  .field_with_errors label,
+  .field_with_errors input {
+    @apply text-red-700 border-red-700;
   }
 }
